# back/src/views/products.py
@@ -1,32 +1,55 @@
 from rest_framework import routers, serializers, viewsets
 from rest_framework.schemas.openapi import AutoSchema
-from ..models import Product
+from ..models import Product, User
 from django.http import Http404
 from rest_framework.views import APIView
 from rest_framework.response import Response
 from rest_framework.request import Request
 from rest_framework import status
+import logging
+from django.core.files.uploadedfile import InMemoryUploadedFile
+from src.lib.aws import MyS3Client
+from django.http import QueryDict
+from typing import cast
+
+logger = logging.getLogger(__name__)
 
 
 class CustomSchema(AutoSchema):
     def get_serializer(self, path, method):
         return ProductSerializer()
 
+    def map_field(self, field):
+        if isinstance(field, serializers.ImageField): 
+            return {"type":"string"}
+        return super().map_field(field)
+
     def map_serializer(self, serializer):
         result = super().map_serializer(serializer)
         result["required"].append("image")
+        result["required"].append("pk")
         return result
 
 
-class ProductSerializer(serializers.HyperlinkedModelSerializer):
+class ProductSerializer(serializers.ModelSerializer):
     image = serializers.ImageField()
 
     class Meta:
         model = Product
-        fields = ["name", "description", "image", "price"]
+        fields = ["pk", "name", "description", "image", "price", "user"]
 
-    def get_image(self, obj):
-        return obj.image.url
+    def to_representation(self, instance: Product):
+        res = super().to_representation(instance)
+        s3Client = MyS3Client()
+        res["image"] = s3Client.s3_host + instance.image
+        return res
+
+    def create(self, validated_data):
+        image: InMemoryUploadedFile = validated_data["image"]
+        s3Client = MyS3Client()
+        s3Client.upload_fileobj(image, image.name)
+        validated_data["image"] = image.name
+        return super().create(validated_data=validated_data)
 
 
 class ProductList(APIView):
@@ -34,11 +57,17 @@ class ProductList(APIView):
 
     def get(self, request, format=None):
         products = Product.objects.all()
+
         serializer = ProductSerializer(products, many=True)
         return Response(serializer.data)
 
-    def post(self, request, format=None):
-        serializer = ProductSerializer(data=request.data)
+    def post(self, request: Request, format=None):
+        user = User.objects.first()
+        if user == None:
+            Response(status=status.HTTP_404_NOT_FOUND)
+        data = cast(QueryDict, request.data)
+        data.appendlist("user", user.pk)
+        serializer = ProductSerializer(data=data)
         if serializer.is_valid():
             serializer.save()
             return Response(serializer.data, status=status.HTTP_201_CREATED)
